feat: implement db connection
