# src/modules/users/models/user.modeils.ts
@@ -1,26 +1,0 @@
-export interface User {
-  id: string; // uuid v4
-  login: string;
-  password: string;
-  version: number; // integer number, increments on update
-  createdAt: number; // timestamp of creation
-  updatedAt: number; // timestamp of last update
-}
-
-export interface CreateUserDto {
-  login: string;
-  password: string;
-}
-
-export interface UpdatePasswordDto {
-  oldPassword: string; // previous password
-  newPassword: string; // new password
-}
-
-export type UserResponse = Omit<User, 'password'>;
-export interface UsersResponse {
-  items: UserResponse[];
-  limit: number;
-  offset: number;
-  total: number;
-}
